--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.2",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
@@ -16,7 +17,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start":"node main.js"
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
